--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* ========================= */
-/*       GLOBAL STYLES       */
+/*       GLOBAL STYLES.CSS       */
 /* ========================= */
 
 html,
